--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
     <style>
         body {
             font-family: 'Lora', serif;
-            background-color: #2b2b2b;
+            background: linear-gradient(135deg, #2b2b2b, #1e1e1e);
             color: #ffffff;
             margin: 0;
             padding: 20px;
             text-align: center;
+            background-size: 400% 400%;
+            animation: backgroundShift 8s infinite;
+        }
+        @keyframes backgroundShift {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
         nav {
             display: flex;
@@ -37,12 +44,6 @@
             margin: 40px 0;
             color: #ffd700;
             text-shadow: 0 0 10px #ffd700, 0 0 20px #ffffff;
-        }
-        .subtitle {
-            font-size: 1.8em;
-            margin: 30px 0;
-            color: #ffd700;
-            text-shadow: 0 0 5px #ffd700;
         }
         .ascii-art {
             white-space: pre;
@@ -101,13 +102,6 @@
             text-align: center;
             margin-bottom: 20px;
         }
-        .ai-functionality ul {
-            list-style-type: circle;
-            padding-left: 30px;
-        }
-        .ai-functionality ul li {
-            margin-bottom: 10px;
-        }
         .feed-dwarf {
             margin: 60px auto;
             font-size: 1.3em;
@@ -134,6 +128,18 @@
             background-color: #ffd700;
             border: none;
             cursor: pointer;
+            position: relative;
+        }
+        .feed-dwarf form button:hover::after {
+            content: "⛏️";
+            position: absolute;
+            right: -20px;
+            animation: miningGlow 0.5s infinite;
+        }
+        @keyframes miningGlow {
+            0% { transform: translateY(0); }
+            50% { transform: translateY(-5px); }
+            100% { transform: translateY(0); }
         }
         .voting-section {
             margin-top: 60px;
@@ -146,7 +152,7 @@
             color: #ffd700;
             text-shadow: 0 0 5px #ffd700;
         }
-        .voting-section .vote-item {
+        .vote-item {
             font-family: 'Roboto Mono', monospace;
             font-size: 1.2em;
             background-color: #333333;
@@ -158,6 +164,12 @@
         }
         .vote-item:hover {
             background-color: #444444;
+        }
+        .mining-counter {
+            margin: 30px 0;
+            font-family: 'Roboto Mono', monospace;
+            font-size: 1.2em;
+            color: #ffd700;
         }
         footer {
             margin-top: 60px;
@@ -174,7 +186,7 @@
     </nav>
     <div class="title">WELCOME TO DWARF AI ($DWARF)</div>
     <div class="ascii-art">
-        ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+        ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⣠⣶⣿⣿⣿⣿⣿⣷⣤⡀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⡀⠀⠀⠀⠀⠀
 ⠀⠀⠀⢀⣼⣿⣿⣿⣿⣿⡿⠿⢿⣿⣿⣿⣿⣿⣷⡄⠀⠀⠀⠀
@@ -200,7 +212,6 @@
             <li>🔥 Vote to determine if they’re **Gems (Praise)** or **Fool’s Gold (FUD).**</li>
             <li>💎 DwarfAI delivers AI-generated memes, insights, or FUD based on the votes.</li>
         </ul>
-        <p style="text-align: center;">Join the chaos and let DwarfAI mine the truth in the crypto world.</p>
     </div>
     <div class="feed-dwarf">
         <h2>Feed the Forge</h2>
@@ -209,6 +220,7 @@
             <input type="url" id="dwarf-link" placeholder="Paste the project link here..." required>
             <button type="submit">Submit</button>
         </form>
+        <div class="mining-counter" id="mining-counter">Mined Blocks: 0</div>
     </div>
     <div class="voting-section">
         <h2>Gem or Fool's Gold?</h2>
@@ -218,6 +230,15 @@
         </div>
     </div>
     <footer>© 2024 DwarfAI | Memes, mining, and AI-powered chaos.</footer>
-    <script src="dwarf.js"></script>
+    <script>
+        let minedBlocks = 0;
+        const miningCounter = document.getElementById('mining-counter');
+
+        document.getElementById('feed-dwarf-form').addEventListener('submit', function (event) {
+            event.preventDefault();
+            minedBlocks++;
+            miningCounter.textContent = `Mined Blocks: ${minedBlocks}`;
+        });
+    </script>
 </body>
 </html>
