--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <h2>How DwarfAI Works</h2>
         <ul>
             <li>🪓 Submit projects or influencers to DwarfAI for evaluation.</li>
-            <li>🔥 Vote to determine if they’re **Gems (Praise)** or **Fool’s Gold (FUD).**</li>
+            <li>🔥 Vote to determine if they’re Gems (Praise) or Fool’s Gold (FUD).</li>
             <li>💎 DwarfAI delivers AI-generated memes, insights, or FUD based on the votes.</li>
         </ul>
     </div>
